[package]
name = "fastd-exporter-rust"
version = "0.0.1"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"



[dependencies]
clap = "2.33.0"
prometheus = "0.10.0"
serde_json = "1.0.40"
serde = {version = "1.0.99", features = ["derive"]}
hyper = "0.12.33"
log = "0.4.8"
pretty_env_logger = "0.3.1"
zmq = "0.9.2"


[[bin]]
name = "prometheus-fastd-exporter"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "src/test_client.rs"


[package.metadata.deb]
license-file = ["LICENSE", "0"]
extended-description = "Prometheus node exporter for fastd."
maintainer = "Paul Maruhn <paulmaruhn@posteo.de>"
copyright = "Paul Maruhn <paulmaruhn@posteo.de>"
depends = "$auto, fastd"
section = "utility"
priority = "optional"
conf-files = ["/etc/default/prometheus-fastd-exporter"]
assets = [
    ["target/release/prometheus-fastd-exporter", "usr/bin/", "755"],
    ["assets/prometheus-fastd-exporter.service", "lib/systemd/system/", "644"],
    ["assets/prometheus-fastd-exporter", "etc/default/", "644"],
]
