[package]
name = "prometheus-fastd-exporter"
version = "0.0.1"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"
description = "Prometheus exporter for fastd."
homepage = "https://paul.pages.chaotikum.org/prometheus-fastd-exporter/"
documentation = "https://paul.pages.chaotikum.org/prometheus-fastd-exporter/"
repository = "https://git.chaotikum.org/paul/prometheus-fastd-exporter"

[dependencies]
clap = "2.33.0"
prometheus = "0.10.0"
serde_json = "1.0.40"
serde = {version = "1.0.99", features = ["derive"]}
tiny_http = "0.8.2"
log = "0.4.8"
pretty_env_logger = "0.3.1"


[package.metadata.deb]
license-file = ["LICENSE", "0"]
extended-description = "Prometheus exporter for fastd."
maintainer = "Paul Maruhn <paulmaruhn@posteo.de>"
copyright = "Paul Maruhn <paulmaruhn@posteo.de>"
depends = "$auto"
section = "utility"
priority = "optional"
conf-files = ["/etc/default/prometheus-fastd-exporter"]
assets = [
    ["target/release/prometheus-fastd-exporter", "usr/bin/", "755"],
    ["assets/prometheus-fastd-exporter.service", "lib/systemd/system/", "644"],
    ["assets/prometheus-fastd-exporter", "etc/default/", "644"],
]
